调试查询Index文件处理逻辑细节